--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,9 @@
       ],
       "@/*": [
         "src/client/*"
+      ],
+      "static/*": [
+        "static/*"
       ]
     },
     "strict": false,
