Added apiCalls calc image boundaries and canvas

--- a/env/development.env
+++ b/env/development.env
@@ -11,5 +11,4 @@ COOKIE_DOMAIN=
 LOG_DIR=logs/app/log.log
 
 #API hosts
-CR_DATA_API_HOST=http://47.110.79.21/gray/cr
-CR_ETL_API_HOST=http://data.service.vpgame.com/gray/cretl/
+DATA_API_HOST=http://35.197.21.101:80
