--- a/env/production.env
+++ b/env/production.env
@@ -11,5 +11,4 @@ COOKIE_DOMAIN=
 LOG_DIR=logs/app/log.log
 
 #API hosts
-CR_DATA_API_HOST=https://dataservice-sec.vpgame.com/gray/cr
-CR_ETL_API_HOST=https://dataservice-sec.vpgame.com/gray/cretl
+DATA_API_HOST=http://35.197.21.101:80
