--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "koa-convert": "^1.2.0",
     "koa-router": "^7.4.0",
     "koa-static-cache": "^5.1.2",
+    "konva": "^4.0.12",
     "less": "^3.9.0",
     "less-vars-to-js": "^1.3.0",
     "log4js": "^4.0.2",
@@ -54,6 +55,7 @@
     "next-seo": "^2.1.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-konva": "^16.10.1-0",
     "react-redux": "^7.1.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
