automatically open labeling tabs

--- a/env/common.env
+++ b/env/common.env
@@ -1,5 +1,8 @@
 # fontLink
 FONT_LINK= https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800,900|Titillium+Web:100,200,300,400,500,600,700,800,900,Roboto+Condensed:100,200,300,400,500,600,700,800,900)
+ICON_FONT_LINK=//at.alicdn.com/t/font_1439488_9mlnec2lt65.css
+
+
 
 #ajax timeout
 REQUEST_TIMEOUT=10000
