--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-dom": "^16.8.3",
     "react-konva": "^16.10.1-0",
     "react-redux": "^7.1.1",
+    "react-tooltip": "^3.11.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "swiper": "^4.5.0"
