--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@typescript-eslint/parser": "^2.3.0",
     "babel-plugin-import": "^1.12.0",
     "babel-plugin-lodash": "^3.3.4",
+    "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "cross-env": "^5.2.0",
     "enzyme": "^3.9.0",
