update npm start

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "postbuild": "rimraf build && mkdirp build/static/$npm_package_version/_next/static && cp -r .next/static/* build/static/$npm_package_version/_next/static",
     "lint": "tslint --project tsconfig.json --format codeFrame --fix",
     "prestart": "npm run build",
-    "start": "npm run server",
-    "server": "pm2 start pm2.config.js",
+    "start": "cross-env NODE_ENV=production node .next/dist/index.js",
+    "server": "pm2 start pm2.config.js --no-daemon",
     "precommit": "npm run lint"
   },
   "husky": {
