--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,9 +52,9 @@ upload:
  image: docker.vpgame.cn/infra/python-1.0-ci-1.0
  script:
    - cd build
-   - mkdir clash-royale
-   - cp -r static/* clash-royale/
-   - python /root/script/upload-oss-multi-site.py clash-royale
+   - mkdir label-system-fe
+   - cp -r static/* label-system-fe/
+   - python /root/script/upload-oss-multi-site.py label-system-fe
  tags:
    - base-runner
  only:
