--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -10,7 +10,8 @@
       ],
       "paths": {
         "~/*": ["src/*"],
-        "@/*": ["src/client/*"]
+        "@/*": ["src/client/*"],
+        "static/*": ["static/*"]
       },
     },
     "include": ["src/server/**/*"]
