--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "predev": "rimraf .next",
     "dev": "./node_modules/.bin/nodemon",
     "build": "./node_modules/.bin/next build && tsc --project tsconfig.server.json",
-    "postbuild": "rimraf build && mkdirp build/static/$npm_package_version/_next/static && cp -r .next/static/* build/static/$npm_package_version/_next/static",
+    "apostbuild": "rimraf build && mkdirp build/static/$npm_package_version/_next/static && cp -r .next/static/* build/static/$npm_package_version/_next/static",
     "lint": "tslint --project tsconfig.json --format codeFrame --fix",
     "start": "cross-env NODE_ENV=production node .next/dist/index.js",
     "server": "pm2 start pm2.config.js --no-daemon",
@@ -46,7 +46,7 @@
     "log4js": "^4.0.2",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.23",
-    "next": "^9.0.6",
+    "next": "^8.1.0",
     "next-compose-plugins": "^2.1.1",
     "next-cookies": "^1.1.3",
     "next-routes": "^1.4.2",
@@ -58,10 +58,10 @@
     "react-tooltip": "^3.11.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "swiper": "^4.5.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.6.0",
     "@babel/plugin-proposal-decorators": "^7.3.0",
     "@babel/preset-env": "^7.6.0",
     "@types/jest": "^24.0.9",
@@ -72,9 +72,9 @@
     "@types/react-redux": "^7.0.1",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^2.3.0",
+    "@zeit/next-typescript": "^1.1.1",
     "babel-plugin-import": "^1.12.0",
     "babel-plugin-lodash": "^3.3.4",
-    "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "cross-env": "^5.2.0",
     "enzyme": "^3.9.0",
@@ -87,11 +87,11 @@
     "husky": "^1.3.1",
     "jest": "^24.1.0",
     "nodemon": "1.17.2",
-    "null-loader": "^3.0.0",
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.8.3",
+    "rimraf": "^2.6.3",
     "sass-resources-loader": "^2.0.1",
-    "ts-node": "^8.4.1",
+    "ts-node": "^8.0.2",
     "tslint": "^5.13.1",
     "typescript": "^3.3.3333"
   }
