--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "predev": "rimraf .next",
     "dev": "./node_modules/.bin/nodemon",
     "build": "./node_modules/.bin/next build && tsc --project tsconfig.server.json",
-    "apostbuild": "rimraf build && mkdirp build/static/$npm_package_version/_next/static && cp -r .next/static/* build/static/$npm_package_version/_next/static",
+    "postbuild": "rimraf build && mkdirp build/static/$npm_package_version/_next/static && cp -r .next/static/* build/static/$npm_package_version/_next/static",
     "lint": "tslint --project tsconfig.json --format codeFrame --fix",
     "start": "cross-env NODE_ENV=production node .next/dist/index.js",
     "server": "pm2 start pm2.config.js --no-daemon",
