--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "next-seo": "^2.1.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-dropdown-select": "^3.6.3",
     "react-konva": "^16.10.1-0",
     "react-redux": "^7.1.1",
     "react-tooltip": "^3.11.1",
