added list types api for uploading images

--- a/env/common.env
+++ b/env/common.env
@@ -13,10 +13,10 @@ LANG_LIST=zh_CN,en_US
 COOKIE_LANG_KEY=VALang
 
 
-SEO_TITLE_EN=FunData DOTA2 Personal Data
+SEO_TITLE_EN=Label System
 SEO_KEYWORDS_EN= Dota2 data, Dota2 stats, Dota2 statistics, Dota2 match history, Dota2 database, Dota2 guides
 SEO_DESC_EN= Varena Dota2 is the leading statistics and community for Dota2
-SEO_TITLE_CN=FunData DOTA2个人数据
+SEO_TITLE_CN=Label System
 SEO_KEYWORDS_CN=刀塔自走棋,DOTA2自走棋,自走棋比赛,自走棋数据,自走棋百科
 SEO_DESC_CN=Varena刀塔自走棋平台是为所有DOTA2自走棋爱好者开发的综合性数据网站，提供DOTA2自走棋战绩查询，DOTA2自走棋对局回顾，刀塔自走棋棋子排名等
 SHARE_DESC=Check out my Dota Data!
