--- a/deploy/prod_service.yml
+++ b/deploy/prod_service.yml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-    service.beta.kubernetes.io/alicloud-loadbalancer-cert-id: 1835243641658707_16d1a99cd4c_134857320_2145275193
-    service.beta.kubernetes.io/alicloud-loadbalancer-protocol-port: "https:443"
+  # annotations:
+  #   service.beta.kubernetes.io/alicloud-loadbalancer-cert-id: 1835243641658707_16d1a99cd4c_134857320_2145275193
+  #   service.beta.kubernetes.io/alicloud-loadbalancer-protocol-port: "https:443"
   name: label-system-fe-prod
   namespace: default
 spec:
   ports:
   - name: label-system-fe-prod-port
-    port: 443
+    port: 10100
     protocol: TCP
     targetPort: 9995
   selector:
