--- a/deploy/prod_deployment.yml
+++ b/deploy/prod_deployment.yml
@@ -27,15 +27,15 @@ spec:
       labels:
         app: __APP_NAME__
     spec:
-      affinity:
-        nodeAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            nodeSelectorTerms:
-            - matchExpressions:
-               - key: group
-                 operator: In
-                 values:
-                 - __GROUP_NAME__
+            #affinity:
+            #  nodeAffinity:
+            #    requiredDuringSchedulingIgnoredDuringExecution:
+            #      nodeSelectorTerms:
+            #      - matchExpressions:
+            #         - key: group
+            #           operator: In
+            #           values:
+            #           - __GROUP_NAME__
       imagePullSecrets:
         - name: vpsecret
       containers:
