--- a/deploy/prod_deployment.yml
+++ b/deploy/prod_deployment.yml
@@ -32,7 +32,7 @@ spec:
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
             - matchExpressions:
-               - key: group
+               - key: cloud.google.com/gke-nodepool
                  operator: In
                  values:
                  - __GROUP_NAME__
