--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "next-cookies": "^1.1.3",
     "next-routes": "^1.4.2",
     "next-seo": "^2.1.0",
+    "prom-client": "^11.5.3",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-dropdown-select": "^3.6.4",
